# CTPL

./: .gitignore  CMakeLists.txt
ctpl/: CMakeLists.txt
ctpl/include/ctpl/game/: IAdversary.h  IBanValidator.h  IStepValidator.h  ITraveller.h  Round.h  common.h
ctpl/include/ctpl/game/outerplanar/: DividedBuilder.h  DividedGraph.h  common.h
ctpl/include/ctpl/graph/: Builder.h  DynamicGraph.h  Edge.h  IDynamicGraph.h  IGraph.h  IndexedGraph.h  algo.h
ctpl/include/ctpl/util/: assert.h
ctpl/src/: DividedBuilder.cpp  DividedGraph.cpp
ctpl_py/: CMakeLists.txt
ctpl_py/examples/: interactive.py  travel_strategy.py
ctpl_py/src/: ctpl_py.cpp
tests/: AlgoTest.cpp  CMakeLists.txt  DynamicGraphTest.cpp  TestsCommon.h
